NTI-9189 fix blurry text in currency input in safari

--- a/src/components/inputs/currency/Styles.css
+++ b/src/components/inputs/currency/Styles.css
@@ -43,6 +43,7 @@
 
 	& .nti-currency-mask {
 		color: var(--tertiary-grey);
+		margin: 0;
 	}
 
 	& .nti-currency-input {
